--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Resume - Pratik Borsadiya</title>
+	<title>Resume - Maulik Modi</title>
 	<style type="text/css">
 		body {
 			margin: 0;
@@ -55,8 +55,8 @@
 			.resume-section {
 				display: flex;
 			}
-			.resume-section-time { flex: 0 0 25%; }
-			.resume-section-info { flex: 0 0 75%; }
+			.resume-section-time { flex: 0 0 22%; }
+			.resume-section-info { flex: 0 0 78%; }
 		}
 		.resume-section-title {
 			padding-bottom: 5px;
@@ -90,6 +90,9 @@
 			top: 0; 
 			content: '\2022';
 		}
+		.resume-statement {
+			margin-top: 0;
+		}
 	</style>
 </head>
 <body>
@@ -98,34 +101,34 @@
 		
 		<div class="resume-heading">
 			<div class="resume-heading-section">
-				<h1 class="resume-heading-title">Pratik Borsadiya</h1>
-				<h3 class="resume-heading-subtitle">Frontend Developer</h3>
+				<h1 class="resume-heading-title">Maulik Modi</h1>
+				<h3 class="resume-heading-subtitle">Senior Developer / Project Manager</h3>
 			</div>
 			<div class="resume-heading-section">
 				<p>
-					E-mail:
-					<a href="mailto:pratikborsadiya@gmail.com">pratikborsadiya@gmail.com</a>
-				</p>
-				<p>
-					Website:
-					<a href="https://pratikborsadiya.in/" target="_blank">pratikborsadiya.in</a>
-				</p>
-			</div>
-			<div class="resume-heading-section last">
-				<p>
 					LinkedIn:
-					<a href="https://www.linkedin.com/in/pratikborsadiya/" target="_blank">linkedin.com/in/pratikborsadiya</a>
+					<a href="https://www.linkedin.com/in/modimaulik/" target="_blank">linkedin.com/in/modimaulik</a>
 				</p>				
 				<p>
 					GitHub:
-					<a href="https://github.com/pratikborsadiya/" target="_blank">github.com/pratikborsadiya</a>
+					<a href="https://github.com/maulikmmodi/" target="_blank">github.com/maulikmmodi</a>
 				</p>	
+			</div>
+			<div class="resume-heading-section last">
+				<p>
+					E-mail:
+					<a href="mailto:maulikmmodi94@gmail.com">maulikmmodi94@gmail.com</a>
+				</p>
+				<p>
+					Mobile:
+					<a href="#">+1 214-609-0911</a>
+				</p>
 			</div>
 		</div>
 
 		<div class="resume-body">
-			<p>
-				Frontend engineer with 3+ years of experience of developing web applications using HTML, CSS and Javascript. Proficient in modern web technologies. Have very good knowledge of user experience and creating user-friendly products. Enthusiastic about Linux and FOSS. Creator and maintainer of an open-source GitHub project Vali Admin, which is helping more than 7K developers every month.
+			<p class="resume-statement">
+				Senior fullstack developer with 3+ years of experience of developing and managing the web applications and the sass products using NodeJs, ReactJs, AngularJs and PHP. Proficient in modern web technologies. Have very good knowledge of UI, UX and managing the clients.
 			</p>
 
 			<h3 class="resume-section-title">Skills</h3>
@@ -133,7 +136,7 @@
 				<p class="resume-section-time">Client Side:</p>
 				<div class="resume-section-info">
 					<p>
-						HTML, CSS, Javascript, SASS, AngularJs, ReactJS, PugJs, Bootstrap, SEO
+						Javascript, AngularJs, ReactJS, React Native, VueJs, PugJs, Bootstrap, HTML, CSS, SASS, LESS
 					</p>
 				</div>
 			</div>
@@ -142,7 +145,7 @@
 				<p class="resume-section-time">Server Side:</p>
 				<div class="resume-section-info">
 					<p>
-						NodeJs, Nginx, Linux (Ubuntu), Amazon EC2, Google Cloud Platform
+						NodeJs, PHP, Python, Java, Nginx, Linux (Ubuntu), Amazon AWS, Redis, MySQL, MongoDB, PostgreSQL
 					</p>
 				</div>
 			</div>
@@ -159,69 +162,89 @@
 			<h3 class="resume-section-title">Experience</h3>
 			<div class="resume-section">
 				<p class="resume-section-time">
-					Jan 2018 - Present
+					May 2017 - Aug 2018
 				</p>
 				<div class="resume-section-info">
-					<h4>Gridle - Senior Frontend Developer</h4>
+					<h4>Gridle - Senior Developer / Project Manager </h4>
 					<p>
-						I am a Senior frontend developer in IT services section of the company. My responsibilities include:
+						I am a senior fullstack developer and later promoted to project manager.
 					</p>
 					<ul class="resume-list">
 						<li>
-							Advising the business team on cost and effort estimation regarding frontend development of various projects.
+							Advising the business team on cost and effort estimation regarding development of various projects.
 						</li>
 						<li>
-							Architect frontend of the projects being implemented by the company with focus on maintainability and performance in mind.
+							Architect the product's structure with different technologies and tools. Lead the development team to achieve the client's expectation and the deadlines.
 						</li>
 						<li>
-							Standardizing frontend programming practices and having them implemented so that the projects are more maintainable and easy to explain to the newer project members.
+							Provide the backend support to the application and setup automation and the jobs to make it hassle free.
 						</li>
 						<li>
-							Helping and mentoring junior members of the frontend team by reviewing and advising them for possible improvements in the code they have written.
+							Helping and mentoring junior members of the team by reviewing and advising them for possible improvements in the code they have written.
 						</li>
 					</ul>
 				</div>
 			</div>
 			<div class="resume-section">
 				<p class="resume-section-time">
-					Jan 2016 - Dec 2017
+					July 2016 - May 2017
 				</p>
 				<div class="resume-section-info">
-					<h4>Gridle - Frontend Developer</h4>
+					<h4>IndiaBizForSale - Senior Fullstack Developer</h4>
 					<p>
-						I was responsible for frontend development of the product Gridle.io. My responsibilities included:
+						I was responsible for the development of the core product IndiaBizForSale.
 					</p>
 					<ul class="resume-list">
 						<li>
-							Working closely with design team and creating interfaces based on visual design and user feedback.
+							Working closely with design team, management team and creating interfaces based on visual design and user feedback.
 						</li>
+						<!-- <li>
+							Working with other team members to maintain the product and to implement new features as per requirement.
+						</li> -->
 						<li>
-							Standardizing frontend code style to facilitate the on-boarding of new team members and making the product easy to manage and update.
-						</li>
-						<li>
-							Working with other team members across various disciplines to improve product experience.
+							Developed event driven analytics which is for analyzing user behaviour and make auto suggestions.
 						</li>
 					</ul>
 				</div>
 			</div>
 			<div class="resume-section">
 				<p class="resume-section-time">
-					July 2015 - Dec 2015
+					Oct 2015 - July 2016
 				</p>
 				<div class="resume-section-info">
-					<h4>Self Employed - Web Developer</h4>
+					<h4>Accenture - Software Engineering Associate</h4>
 					<p>
-						I have helped various small business enterprises to store and manage their customer data by creating various web based applications.
+						I have developed on Oracle Forms and Reports which used in ERP solutions. For that I have used PL/SQL, shell script and oracle R12 database.
+					</p>
+				</div>
+			</div>
+
+			<div class="resume-section">
+				<p class="resume-section-time">
+					Jan 2015 - Oct 2016
+				</p>
+				<div class="resume-section-info">
+					<h4>Gridle - Intern / Software Developer</h4>
+					<p>
+						I developed back-end of the product and manage the database. Also worked on analytics module,  automated emails, and notification for the users, which helps to get more user engagement. 
 					</p>
 				</div>
 			</div>
 
 			<h3 class="resume-section-title">Education</h2>
+			
 			<div class="resume-section">
-				<p class="resume-section-time">2012 - 2015</p>
+				<p class="resume-section-time">2018 - 2020</p>
 				<div class="resume-section-info">
-					<h4>Gujarat Technological University</h4>
-					<p>Diploma in Computer Engineering</p>
+					<h4>New York University Tandon School of Engineering</h4>
+					<p>MS in Computer Science</p>
+				</div>
+			</div>
+			<div class="resume-section">
+				<p class="resume-section-time">2011 - 2015</p>
+				<div class="resume-section-info">
+					<h4>LDCE</h4>
+					<p>Computer Engineering</p>
 				</div>
 			</div>
 		</div>
