--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
 			justify-content: space-between;
 			background-color: #291b2c;
 			color: #fff;
-			padding: 30px;
+			padding: 25px;
 			line-height: 1;
 		}
 		.resume-heading a {
@@ -55,8 +55,8 @@
 			.resume-section {
 				display: flex;
 			}
-			.resume-section-time { flex: 0 0 22%; }
-			.resume-section-info { flex: 0 0 78%; }
+			.resume-section-time { flex: 0 0 15%; }
+			.resume-section-info { flex: 0 0 100%; }
 		}
 		.resume-section-title {
 			padding-bottom: 5px;
@@ -65,6 +65,9 @@
 			border-bottom: 1px solid #ddd;
 			font-weight: 600;
 			font-size: 18px;
+		}
+		.resume-section-body {
+			padding-left: 10px;
 		}
 		.resume-section p,
 		.resume-section h4 {
@@ -93,6 +96,18 @@
 		.resume-statement {
 			margin-top: 0;
 		}
+
+		.resume-section-info-title {
+			display: flex; 
+			justify-content: space-between;
+		}
+		.resume-company-section {
+
+			padding-left: 15px;
+		}
+		.resume-company-title {
+			margin-bottom: 5px !important;
+		}
 	</style>
 </head>
 <body>
@@ -102,9 +117,20 @@
 		<div class="resume-heading">
 			<div class="resume-heading-section">
 				<h1 class="resume-heading-title">Maulik Modi</h1>
-				<h3 class="resume-heading-subtitle">Senior Developer / Project Manager</h3>
+				<!-- <h3 class="resume-heading-subtitle">Senior Developer / Project Manager</h3> -->
+				<p>
+					E-mail:
+					<a href="mailto:maulikmmodi94@gmail.com">mm9817@nyu.edu</a>
+				</p>
+				<p>
+					Mobile:
+					<a href="#">214-609-0911</a>
+				</p>
 			</div>
 			<div class="resume-heading-section">
+				
+			</div>
+			<div class="resume-heading-section last">
 				<p>
 					LinkedIn:
 					<a href="https://www.linkedin.com/in/modimaulik/" target="_blank">linkedin.com/in/modimaulik</a>
@@ -112,139 +138,187 @@
 				<p>
 					GitHub:
 					<a href="https://github.com/maulikmmodi/" target="_blank">github.com/maulikmmodi</a>
-				</p>	
-			</div>
-			<div class="resume-heading-section last">
-				<p>
-					E-mail:
-					<a href="mailto:maulikmmodi94@gmail.com">maulikmmodi94@gmail.com</a>
 				</p>
 				<p>
-					Mobile:
-					<a href="#">+1 214-609-0911</a>
+					Stack-overflow:
+					<a href="https://stackoverflow.com/users/4685440/maulik-modi" target="_blank">stackoverflow.com/users/4685440/maulik-modi</a>
 				</p>
 			</div>
+			
 		</div>
 
 		<div class="resume-body">
 			<p class="resume-statement">
-				Senior fullstack developer with 3+ years of experience of developing and managing the web applications and the sass products using NodeJs, ReactJs, AngularJs and PHP. Proficient in modern web technologies. Have very good knowledge of UI, UX and managing the clients.
+				Senior Developer / Project Manager with 4 years of experience in developing and managing web applications and sass products using NodeJs, ReactJs, AngularJs, Java and PHP. Proﬁcient in modern web technologies. Knowledgeable in UI, UX and working with clients.
 			</p>
 
 			<h3 class="resume-section-title">Skills</h3>
-			<div class="resume-section">
-				<p class="resume-section-time">Client Side:</p>
-				<div class="resume-section-info">
-					<p>
-						Javascript, AngularJs, ReactJS, React Native, VueJs, PugJs, Bootstrap, HTML, CSS, SASS, LESS
-					</p>
+			<div class="resume-section-body">
+				<div class="resume-section">
+					<p class="resume-section-time">Client Side:</p>
+					<div class="resume-section-info">
+						<p>
+							Javascript, AngularJs, ReactJS, React Native, VueJs, PugJs, Bootstrap, HTML, CSS, SASS, LESS
+						</p>
+					</div>
 				</div>
-			</div>
-
-			<div class="resume-section">
-				<p class="resume-section-time">Server Side:</p>
-				<div class="resume-section-info">
-					<p>
-						NodeJs, PHP, Python, Java, Nginx, Linux (Ubuntu), Amazon AWS, Redis, MySQL, MongoDB, PostgreSQL
-					</p>
+				<div class="resume-section">
+					<p class="resume-section-time">Server Side:</p>
+					<div class="resume-section-info">
+						<p>
+							NodeJs, Java, Python, PHP, MySQL, MongoDB, PostgreSQL, Redis, Nginx, Linux (Ubuntu), Amazon AWS
+						</p>
+					</div>
 				</div>
-			</div>
-
-			<div class="resume-section">
-				<p class="resume-section-time">Developer Tools:</p>
-				<div class="resume-section-info">
-					<p>
-						Git, Grunt, Gulp, Webpack, NPM, Docker
-					</p>
+				<div class="resume-section">
+					<p class="resume-section-time">Developer Tools:</p>
+					<div class="resume-section-info">
+						<p>
+							Git, Grunt, Gulp, Webpack, NPM, Docker, Elasticsearch, Kibana
+						</p>
+					</div>
 				</div>
 			</div>
 
 			<h3 class="resume-section-title">Experience</h3>
-			<div class="resume-section">
-				<p class="resume-section-time">
-					May 2017 - Aug 2018
-				</p>
-				<div class="resume-section-info">
-					<h4>Gridle - Senior Developer / Project Manager </h4>
-					<p>
-						I am a senior fullstack developer and later promoted to project manager.
-					</p>
-					<ul class="resume-list">
-						<li>
-							Advising the business team on cost and effort estimation regarding development of various projects.
-						</li>
-						<li>
-							Architect the product's structure with different technologies and tools. Lead the development team to achieve the client's expectation and the deadlines.
-						</li>
-						<li>
-							Provide the backend support to the application and setup automation and the jobs to make it hassle free.
-						</li>
-						<li>
-							Helping and mentoring junior members of the team by reviewing and advising them for possible improvements in the code they have written.
-						</li>
-					</ul>
+			<div class="resume-section-body">
+				<div class="resume-section">
+					<div class="resume-section-info">
+						<div class="resume-section-info-title">
+							<h4 style="margin-bottom: 5px;">Gridle, Senior Fullstack Developer / Project Manager </h4>
+							<p>
+								May 2017 - Aug 2018
+							</p>
+						</div>
+						<div class="resume-company-section">
+							<p class="resume-company-title"><b>Project: HomeSchoolPanda, A Homeschooling Platform</b></p>
+							<ul class="resume-list">
+								<li>
+									Advised the business team on cost and effort estimation regarding the development of the projects.
+								</li>
+								<!-- <li>
+									Implemented on two-factor authentication, firewalls, created SSH keys to access the server, and SSL support for the website.
+								</li> -->
+								<li>
+									Architected the product's structure with different technologies and tools. Led the development team of the six peoples to achieve the client's expectation and the deadlines.
+								</li>
+								<li>
+									Provided the backend support to the application. Created the automation and the jobs to make it hassle-free.
+								</li>
+							</ul>
+						</div>
+						<div class="resume-company-section">
+							<p class="resume-company-title"><b>Project: Aqualogy, An E-Commerce Marketplace</b></p>
+							<ul class="resume-list">
+								<li>
+									Led the software team of five peoples through the development of the core product and the administrative control. Assigned coding tasks to various team members. Regularly monitored work with software development tools.
+								</li>
+								<!-- <li>
+									Configured nginx server from a threat like brute force and man in the middle attack. Made server access secure with google authenticator.
+								</li> -->
+								<li>
+									Developed the real-time notification, email and the feedback system to engage users. Created the logistics flow for the product.
+								</li>
+							</ul>
+						</div>
+						<div class="resume-company-section">
+							<p class="resume-company-title"><b>Project: Samcara, A Career Assessment Tool</b></p>
+							<ul class="resume-list">
+								<li>
+									Architected, designed, and developed a single page application for the product. Used Birkman API for the career assessment.
+								</li>
+								<li>
+									Helped and mentored junior members of the team by reviewing and advising them for possible improvements in the code.
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="resume-section">
-				<p class="resume-section-time">
-					July 2016 - May 2017
-				</p>
-				<div class="resume-section-info">
-					<h4>IndiaBizForSale - Senior Fullstack Developer</h4>
-					<p>
-						I was responsible for the development of the core product IndiaBizForSale.
-					</p>
-					<ul class="resume-list">
-						<li>
-							Working closely with design team, management team and creating interfaces based on visual design and user feedback.
-						</li>
-						<!-- <li>
-							Working with other team members to maintain the product and to implement new features as per requirement.
-						</li> -->
-						<li>
-							Developed event driven analytics which is for analyzing user behaviour and make auto suggestions.
-						</li>
-					</ul>
+
+				<div class="resume-section">
+					<div class="resume-section-info">
+						<div class="resume-section-info-title">
+							<h4 style="margin-bottom: 5px;">IndiaBizForSale, Senior Fullstack Developer</h4>
+							<p>
+								July 2016 - May 2017
+							</p>
+						</div>
+						<div class="resume-company-section">
+							<p class="resume-company-title"><b>Project: IndiaBizForSale, A Network To Grow Business</b></p>
+							<ul class="resume-list">
+								<li>
+									Worked closely with design team, management team and created interfaces based on visual design and user feedback.
+								</li>
+								<li>
+									Worked on a frontend as well as a backend of the product to implement new features as per requirement.
+								</li>
+								<li>
+									Developed event-driven analytics which is for analyzing user behavior and make auto-suggestions. Used elasticsearch and created filter module for better experience. 
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="resume-section">
-				<p class="resume-section-time">
-					Oct 2015 - July 2016
-				</p>
-				<div class="resume-section-info">
-					<h4>Accenture - Software Engineering Associate</h4>
-					<p>
-						I have developed on Oracle Forms and Reports which used in ERP solutions. For that I have used PL/SQL, shell script and oracle R12 database.
-					</p>
+
+				<div class="resume-section">
+					<div class="resume-section-info">
+						<div class="resume-section-info-title">
+							<h4 style="margin-bottom: 5px;">Accenture, Software Engineering Associate</h4>
+							<p>
+								Oct 2015 - July 2016
+							</p>
+						</div>
+						<div class="resume-company-section">
+							<p class="resume-company-title"><b>Project: AT&T ERP Solution</b></p>
+							<ul class="resume-list">
+								<li>
+									Developed Oracle Forms and Oracle Reports which used in ERP solutions. Worked on PL/SQL, shell script and Oracle R12 database to manage the resources.
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
+
+				<div class="resume-section">
+					<div class="resume-section-info">
+						<div class="resume-section-info-title">
+							<h4 style="margin-bottom: 5px;">Gridle, Intern / Software Developer</h4>
+							<p>
+								Jan 2015 - Oct 2015
+							</p>
+						</div>
+						<div class="resume-company-section">
+							<p class="resume-company-title"><b>Project: Gridle, A Collaboration Tool</b></p>
+							<ul class="resume-list">
+								<li>
+									Developed the back-end of the product and managed the database. Created an analytics module to measure daily activity of the user. Worked on automated emails and real time notiﬁcation to get user engagement.
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				
 			</div>
 
-			<div class="resume-section">
-				<p class="resume-section-time">
-					Jan 2015 - Oct 2016
-				</p>
-				<div class="resume-section-info">
-					<h4>Gridle - Intern / Software Developer</h4>
-					<p>
-						I developed back-end of the product and manage the database. Also worked on analytics module,  automated emails, and notification for the users, which helps to get more user engagement. 
-					</p>
+			<h3 class="resume-section-title" style="margin-top: 0px;margin-bottom: 15px;">Education</h2>
+			<div class="resume-section-body">
+				<div class="resume-section">
+					<div class="resume-section-info">
+						<div class="resume-section-info-title">
+							<h4 style="margin-bottom: 5px;">New York University Tandon School of Engineering</h4>
+							<p>May 2020</p>
+						</div>
+						<p>Masters of Science, Computer Science</p>
+					</div>
 				</div>
-			</div>
-
-			<h3 class="resume-section-title">Education</h2>
-			
-			<div class="resume-section">
-				<p class="resume-section-time">2018 - 2020</p>
-				<div class="resume-section-info">
-					<h4>New York University Tandon School of Engineering</h4>
-					<p>MS in Computer Science</p>
-				</div>
-			</div>
-			<div class="resume-section">
-				<p class="resume-section-time">2011 - 2015</p>
-				<div class="resume-section-info">
-					<h4>LDCE</h4>
-					<p>Computer Engineering</p>
+				<div class="resume-section">
+					<div class="resume-section-info">
+						<div class="resume-section-info-title">
+							<h4 style="margin-bottom: 5px;">LD College Of Engineering</h4>
+							<p>May 2015</p>
+						</div>
+						<p>Bachelor of Engineering, Computer Engineering, CGPA: 8.28</p>
+					</div>
 				</div>
 			</div>
 		</div>
